@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model

'class Platform {
'  -description
'}

class Owner {
    email
    name
    numberCitizen
    tin
    phoneNumber
}

class Property {
    propertyType
    areaProperty
    distanceCityCenter
    conditionProperty
    photos
}

class House{
    basement
    loft
    sunExposure
}

class PropertyType{
    designation
}

class Building{
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
}

class Location {
    street
    zipCode
    stateUS
    city
    district
}

class Request{
    idRequest
    date
}
class RequestSale {
    salePrice
}

class RequestLease {
    durationOfContract
    rentalPrice

}

class RequestType {
    designation
}

class Agent {
}

Owner "1" -- "1..*" Property: owns >

House --|> Building

Building --|> Property

Property "1" -- "1" Location: owns >

Owner "1" -- "1" Location: owns >

PropertyType "1" -- "*" Property: contains <

Owner "1" - "*" Request: asks to create >

Request <|-- RequestSale

Request <|-- RequestLease

Request "*" -- "1" RequestType: contains >

Owner "1" -- "1..*" Agent: choses >

Request "1" -- "1..*" Agent: contains >

Request "1" -- "1..*" Property: contains >

Request "1" -- "1..*" Owner: contains >


@enduml